docs(readme.md、数据库学习.md): 增加nestjs集成mongodb内容
nestjs如何集成mongodb

--- a/数据库学习.md
+++ b/数据库学习.md
@@ -756,14 +756,277 @@ select * from customer_orders
 
 ## 3.2 非关系型数据库(文档型数据库)-MongoDB
 
+### 1 概述
+Mongodb 是由C++语言编写的、面向文档的、用于存储大量数据的、为了快速开发互联网web应用而设计的开源NoSQL数据库。官网下载安装完成后使用 GUI图形工具操作即可。所谓的文档是一种类似json的结构（就是增强的json即bson二进制的json）。
+
+和MySQL相关常用术语比较
+|   RDBMS    |      MongoDB       |
+| :--------: | :----------------: |
+| Table(表)  |  Collection(集合)  |
+|  Row(行)   |   Document(文档)   |
+| Column(列) |    Field(字段)     |
+|   Joins    | Embedded documents |
+
+1. **数据库**-用db标识当前正在使用的数据库对象。
+2. **集合**–集合就是 MongoDB 文档组，类似于 RDBMS （关系数据库管理系统：Relational Database Management System）中的表table。一个集合就是一张表。集合名(类似表名)命名规则：遵循js变量命名规则基本是没问题的。
+3. **文档(document)**-文档是一个键值(key-value)对(即BSON)，属性名和属性值之间用:冒号隔开，键值对之间使用,逗号隔开。
+4. **字段**-文档中的名称/值对。一个文档具有零个或多个字段。字段类似于关系数据库中的列。             
+5. **_id**–这是每个MongoDB文档中必填的字段。_id字段表示MongoDB文档中的唯一值。_id字段类似于文档的主键。新增数据时没有指定将会自动创建。
+
+
+### 2 单集合操作
+安装完成后就可以进行数据库相关操作了,其实和MySQL一样，操作数据库需要先创建数据库，再创建表，最后进行增删改查。
+我们先学习一个集合的CURD操作即文档的创建、读、更新以及删除操作。
+
+1. 新增插入数据 insert() 方法可以一次将多个文档插入到集合中，多个时传递一个数组。insertOne() 将单个文档插入集合中。insertMany()可以将多个文档插入一个集合中,传入一个数组即可。如果集合当前不存在，则插入操作将创建该集合。
+
+2. 查询 find() 方法用于查询集合中的文档,查询的条件永远是一个对象包裹的。db.collection.find( query, projection, options )接收三个可选参数。query 查询条件-使用 {} 包裹，相当于 SQL 中的 WHERE子句。空对象 {}，表示匹配集合中的所有文档。常见：精确匹配​​：{ name: "Li Lei" }、​​范围查询​​：{ age: { $gt: 18, $lte: 25 } }（年龄大于 18 且小于等于 25）、​​逻辑运算符​​：$or: { $or: [{ age: 20 }, { major: "Math" }] }、$in: { courses: { $in: ["Programming", "Math"] } }、​​嵌套文档查询​​：{ "hobby.sports": "basketball" }。projection字段投影控制返回文档中包含或排除的字段，相当于 SQL 中的 SELECT字段列表。不传时默认返回所有字段，包含字段​​：{ name: 1, age: 1 }（返回 name和 age）​​排除字段​​：{ address: 0, score: 0 }（隐藏 address和 score）​​强制排除 _id​​：{ name: 1, _id: 0 }（不返回 _id）。查询修饰符，在find()方法后面可以继续跟方法主要是sort()、skip()、limit()、count()。排序​​：.sort({ age: -1 })（按年龄降序，1升序，-1降序）​​跳过记录​​：.skip(2)（跳过2条记录）​​限制返回记录数​​：.limit(2)（返回2条记录）​​统计记录数​​：.count()（返回记录数）​
+
+3. 更新 update() 方法用于更新集合中的文档。db.collection.update( query, update, options )接收三个参数。query 查询条件-使用 {} 包裹，相当于 SQL 中的 WHERE子句。update 更新操作-使用 {} 包裹，相当于 SQL 中的 SET 子句。options 可选参数，用于指定更新选项。
+
+4. 删除 delete() 方法用于删除集合中的文档。db.collection.delete( query, options )接收两个参数。query 删除条件-使用 {} 包裹，相当于 SQL 中的 WHERE 子句。options 可选参数，用于指定删除选项。
+
+还有很多方法是可以查找修改删除同时进行的：比如 findAndModify()、findOneAndUpdate()、findOneAndDelete()、findOneAndReplace()。
+
+**常见操作符：**
+| 操作符 | 描述                                                            |
+| ------ | --------------------------------------------------------------- |
+| $eq    | 匹配等于指定值的值。                                            |
+| $gt    | 匹配大于指定值的值。                                            |
+| $gte   | 匹配大于等于指定值的值。                                        |
+| $in    | 匹配数组中指定的任何值。                                        |
+| $lt    | 匹配小于指定值的值。                                            |
+| $lte   | 匹配小于等于指定值的值。                                        |
+| $ne    | 匹配所有不等于指定值的值。                                      |
+| $nin   | 不匹配数组中指定的任何值。                                      |
+| $an    | 使用逻辑 AND 连接查询子句将返回与两个子句的条件匹配的所有文档。 |
+| $not   | 反转查询谓词的效果，并返回与查询谓词不匹配的文档。              |
+| $nor   | 使用逻辑 NOR 的联接查询子句会返回无法匹配这两个子句的所有文档。 |
+| $or    | 使用逻辑 OR 连接多个查询子句会返回符合任一子句条件的所有文档。  |
 
 
 
+```bash
+# 默认使用"db"来标识数据库,注意：MongoDB 中默认的数据库为 test
+$ db
+# 显示当前数据库服务实例所拥有的所有的数据库。
+$ show dbs
+# 创建或使用数据库，不存在时会在第一次插入数据时自动创建。
+$ use mongo-study
+# 删除当前数据库
+$ db.dropDatabase()
+# 查看当前数据库的所有集合
+$ show collections
+# 创建一个集合
+$ db.createCollection("users")
+# 删除指定集合
+$ db.users.drop()
 
+# 插入文档，集合不存在时会自动创建 
+$ db.users.insert({name: "张三", age: 18})
+# 插入多个文档
+$ db.users.insert([{name: "张三", age: 18}, {name: "李四", age: 19}])
+# 插入一个文档
+$ db.users.insertOne({name: "王五", age: 20})
+# 插入多个文档
+$ db.users.insertMany([{name: "王五", age: 20}, {name: "赵六", age: 21}])
+# save方法
+$ db.users.save({name: "王五", age: 20})
+
+# 查询文档练习
+$ db.inventory.insertMany([
+   { item: "journal", qty: 25, size: { h: 14, w: 21, uom: "cm" }, status: "A" },
+   { item: "notebook", qty: 50, size: { h: 8.5, w: 11, uom: "in" }, status: "A" },
+   { item: "paper", qty: 100, size: { h: 8.5, w: 11, uom: "in" }, status: "D" },
+   { item: "planner", qty: 75, size: { h: 22.85, w: 30, uom: "cm" }, status: "D" },
+   { item: "postcard", qty: 45, size: { h: 10, w: 15.25, uom: "cm" }, status: "A" }
+]);
+# 查询所有文档 - 对应如下SQL语句 SELECT * FROM inventory
+$ db.getCollection("inventory").find({})
+$ db.inventory.find({})
+# 所有检索到文档中item, status, _id三个字段。
+# 查询指定条件 - 对应如下SQL语句 SELECT _id, item, statuqtys from inventory;
+$ db.inventory.find({}, {item: 1, qty: 1})
+# 查询指定条件 - 对应如下SQL语句 SELECT * FROM inventory WHERE status = "D"
+$ db.inventory.find({status: "A"})
+# 使用查询操作符
+# 查询指定条件 - 对应如下SQL语句 SELECT * FROM inventory WHERE status = "A" AND qty < 30
+$ db.inventory.find( { status: "A", qty: { $lt: 30 } } )
+# 查询指定条件 - 对应如下SQL语句 SELECT * FROM inventory WHERE status = "A" OR qty < 30
+$ db.inventory.find( { $or: [ { status: "A" }, { qty: { $lt: 30 } } ] } )
+# 查询指定条件 - 对应如下SQL语句 SELECT * FROM inventory WHERE status in ("A", "D")
+$ db.inventory.find( { status: { $in: [ "A", "D" ] } } )
+# 返回inventory集合中status等于**"A" 并且qty小于 ($lt) 30或者item** 是以p字符开头的所有文档。
+# 查询指定条件 - 对应如下SQL语句 SELECT * FROM inventory WHERE status = "A" AND ( qty < 30 OR item LIKE "p%")
+$ db.inventory.find( {
+     status: "A",
+     $or: [ { qty: { $lt: 30 } }, { item: /^p/ } ]
+} )
+# 分页
+$ db.inventory.find().skip(2).limit(2)
+
+# 更新
+$ db.inventory.update( { status: "D" }, { $set: { qty: 0 } } )
+# 更新指定条件的第一个文档
+$ db.inventory.updateOne( { status: "D" }, { $set: { qty: 0 } } )
+# 批量更新
+$ db.inventory.updateMany( { status: "D" }, { $set: { qty: 0 } } )
+
+# 删除
+$ db.inventory.remove( { status: "D" } )
+# 删除指定条件的第一个文档
+$ db.inventory.deleteOne( { status: "D" } )
+# 批量删除
+$ db.inventory.deleteMany( { status: "D" } )
+# 删除所有
+$ db.inventory.deleteMany({})
+$ db.inventory.remove({})
+
+
+```
+
+### 3 多集合操作
+在MongoDB中，数据关系的实现方式与传统SQL数据库不同，主要通过​​内嵌文档（Embedding）​​ 和 ​​引用（Referencing）​​ 两种策略实现复杂关系。引用方式​​是通过外键关联另一个文档的_id，需额外查询获取关联数据。本质上和SQL得类似，区别是查询方法得不一样。在mongodb中要使用$lookup（聚合查询）来实现多集合关联查询。它是对同一数据库中的集合执行左外连接(其功能类似于 SQL 中的 LEFT JOIN)，以过滤外部集合中的文档进行处理。
+
+**核心语法**：遍历当前集合的每个文档，用 localField 的值匹配目标集合中 foreignField值相等的文档，将匹配结果以数组形式存入 as指定的字段。无论是否匹配到数据，as字段始终存在（无匹配时为空数组 []），实现 LEFT JOIN效果，$lookup可能导致内存与计算开销增大，尤其关联大数据集时。建议在 localField和 foreignField上创建索引 
+
+
+```js
+{
+  $lookup: {
+    from: "<目标集合名>",          // 需关联的集合
+    localField: "<本地字段>",      // 当前集合的关联字段
+    foreignField: "<目标字段>",    // 目标集合的匹配字段
+    as: "<输出数组字段名>"         // 关联结果存储的字段名（数组类型）
+  }
+}
+
+```
+
+#### 1 一对一关系
+推荐使用内嵌文档​将关联数据直接嵌入主文档中，确保一次查询即可获取所有信息。
+```json
+// ​​内嵌文档
+{
+  "_id": "user123",
+  "name": "张三",
+  "address": {  // 内嵌地址文档
+    "city": "北京",
+    "street": "中关村"
+  }
+}
+// 引用
+// 用户文档
+{ "_id": "user123", "name": "张三" }
+// 地址文档
+{ "user_id": "user123", "city": "北京", "street": "中关村" }
+```
+#### 2 一对多关系
+
+
+
+#### 3 多对多关系
+学生（students）与课程（courses）的关联查询（需中间集合 enrollments）
+```js
+// 学生文档
+{ "_id": "student123", "name": "张三" }
+// 课程文档
+{ "_id": "course123", "name": "数学" }
+// 中间集合文档（记录学生选课关系）
+{ "student_id": "student123", "course_id": "course123" }
+// 聚合查询
+db.students.aggregate([
+  {
+    $lookup: {
+      from: "enrollments",
+      localField: "_id",
+      foreignField: "studentId",
+      as: "enrollments"
+    }
+  },
+  {
+    $lookup: {
+      from: "courses",
+      localField: "enrollments.courseId",
+      foreignField: "_id",
+      as: "courses"
+    }
+  }
+]);
+
+```
 
 
 
 ## 3.3 非关系型数据库(键值型数据库)-Redis
 
+### 1 概述
+Redis是一个开源的使用ANSI C语言编写、遵守BSD协议、支持网络、可基于内存亦可持久化的日志型、Key-Value键值对形式的数据库。通常在做后端服务的时候来做缓存。优点：数据存放在内存中，读写速度非常快。缺点：内存是非常昂贵的可存储的数据量不大，且断电数据丢失。
+
+它也是分为服务器端和客户端的，并且提供了一个 redis-cli 的命令行客户端。windows版本去官网安装下载安装即可。可以使用cli交互也可以使用可视化工具，为了方便使用可视化工具即可。注意：redis默认的端口是：6379
+
+### 2 常见数据类型操作
+redis可以缓存不同类型的数据，所以 redis 的设计是 key、value 的。并且值的类型有很多：字符串（string）、列表（list）、集合（set）、有序集合（sorted set）、哈希表（hash）、地理信息（geospatial）、位图（bitmap）等。使用set和get命令可以完成绝大部分的操作了。
+
+```js
+//  string 相关的操作
+$ keys * // 查看所有的key
+$ get key // 获取指定key的值
+$ set key value // 设置指定key的值
+$ del key // 删除指定key
+$ type key // 查看指定key的类型
+$ strlen key // 查看指定key的value的长度
+$ incr key // 自增1
+$ decr key // 自减1
+$ incrby key 10 // 自增10
+$ decrby key 10 // 自减10
+
+//  list 列表相关的操作
+$ lpush key value // 从左边插入一个值
+$ rpush key value // 从右边插入一个值
+$ lpop key // 从左边弹出（删除）一个值
+$ rpop key // 从右边弹出（删除）一个值
+$ lrange key 0 -1 // 查看列表所有的值
+$ llen key // 查看列表的长度
+$ lindex key index // 查看指定索引的值
+$ lset key index value // 设置指定索引的值
+$ lrem key count value // 删除指定的值，count为0表示删除所有的
+$ ltrim key start end // 截取列表
+
+// set 相关操作特点是无序并且元素不重复。只能去重、判断包含，不能对元素排序。
+$ sadd key value // 向集合中添加一个值
+$ smembers key // 查看集合所有的值
+$ srem key value // 删除集合中的一个值
+$ scard key // 查看集合的长度
+$ sismember key value // 查看集合是否包含指定的值
+$ sunion key1 key2 // 集合的并集
+$ sinter key1 key2 // 集合的交集
+$ sdiff key1 key2 // 集合的差集
+
+// sorted set，也就是 zset 排序、去重，实现如排行榜等需求
+$ zadd key score value // 添加一个元素
+$ zrange key 0 -1 // 查看所有元素
+$ zrange key 0 -1 withscores // 查看所有元素和分数
+$ zrem key value // 删除一个元素
+$ zcard key // 查看元素个数
+$ zscore key value // 查看元素的分数
+$ zincrby key 1 value // 增加元素的分数
+$ zrangebyscore key min max // 查看分数在 min 到 max 之间的元素
+$ zremrangebyscore key min max // 删除分数在 min 到 max 之间的元素
+$ zrevrange key 0 -1 withscores // 查看所有元素，从大到小排序
+$ zrevrangebyscore key max min withscores // 查看分数在 max 到 min 之间的元素，从大到小排序
+
+// hash 相关操作 和 map 一样
+$ hset key field value // 设置一个字段的值
+$ hget key field // 获取一个字段的值
+$ hmset key field1 value1 field2 value2 // 设置多个字段的值
+$ hmget key field1 field2 // 获取多个字段的值
+$ hkeys key // 获取所有的字段
+$ hvals key // 获取所有的值
+$ hlen key // 获取字段的数量
+$ hdel key field // 删除一个字段
+$ hexists key field // 判断是否存在一个字段
+
+```
 
 
