docs(readme.md): 增加扫描二维码登录认证内容

--- a/数据库学习.md
+++ b/数据库学习.md
@@ -788,21 +788,21 @@ Mongodb 是由C++语言编写的、面向文档的、用于存储大量数据的
 
 还有很多方法是可以查找修改删除同时进行的：比如 findAndModify()、findOneAndUpdate()、findOneAndDelete()、findOneAndReplace()。
 
-**常见操作符：**
+**常见操作符：**本质是英语单词的缩写，类似 in 的还有 gt（great than）、lt（less than）、gte（great than equal ）、lte（less than equal ）、ne（not equal），多个条件就用and,or,not
 | 操作符 | 描述                                                            |
 | ------ | --------------------------------------------------------------- |
-| $eq    | 匹配等于指定值的值。                                            |
+| $in    | 匹配数组中指定的任何值。                                        |
+| $nin   | 不匹配数组中指定的任何值。                                      |
 | $gt    | 匹配大于指定值的值。                                            |
 | $gte   | 匹配大于等于指定值的值。                                        |
-| $in    | 匹配数组中指定的任何值。                                        |
 | $lt    | 匹配小于指定值的值。                                            |
 | $lte   | 匹配小于等于指定值的值。                                        |
+| $eq    | 匹配等于指定值的值。                                            |
 | $ne    | 匹配所有不等于指定值的值。                                      |
-| $nin   | 不匹配数组中指定的任何值。                                      |
-| $an    | 使用逻辑 AND 连接查询子句将返回与两个子句的条件匹配的所有文档。 |
+| $and   | 使用逻辑 AND 连接查询子句将返回与两个子句的条件匹配的所有文档。 |
+| $or    | 使用逻辑 OR 连接多个查询子句会返回符合任一子句条件的所有文档。  |
 | $not   | 反转查询谓词的效果，并返回与查询谓词不匹配的文档。              |
 | $nor   | 使用逻辑 NOR 的联接查询子句会返回无法匹配这两个子句的所有文档。 |
-| $or    | 使用逻辑 OR 连接多个查询子句会返回符合任一子句条件的所有文档。  |
 
 
 
@@ -811,6 +811,7 @@ Mongodb 是由C++语言编写的、面向文档的、用于存储大量数据的
 $ db
 # 显示当前数据库服务实例所拥有的所有的数据库。
 $ show dbs
+$ show databases
 # 创建或使用数据库，不存在时会在第一次插入数据时自动创建。
 $ use mongo-study
 # 删除当前数据库
@@ -854,6 +855,7 @@ $ db.inventory.find({status: "A"})
 $ db.inventory.find( { status: "A", qty: { $lt: 30 } } )
 # 查询指定条件 - 对应如下SQL语句 SELECT * FROM inventory WHERE status = "A" OR qty < 30
 $ db.inventory.find( { $or: [ { status: "A" }, { qty: { $lt: 30 } } ] } )
+$ db.inventory.find( { $and: [ { status: "A" }, { qty: { $lt: 30 } } ] } )
 # 查询指定条件 - 对应如下SQL语句 SELECT * FROM inventory WHERE status in ("A", "D")
 $ db.inventory.find( { status: { $in: [ "A", "D" ] } } )
 # 返回inventory集合中status等于**"A" 并且qty小于 ($lt) 30或者item** 是以p字符开头的所有文档。
@@ -864,6 +866,13 @@ $ db.inventory.find( {
 } )
 # 分页
 $ db.inventory.find().skip(2).limit(2)
+# 计数
+$ db.inventory.count()
+$ db.inventory.count({status: "A"})
+# 查一条
+$ db.inventory.findOne({status: "A"})
+# 排序，1 是升序、-1 是降序
+$ db.inventory.find().sort({item: 1})
 
 # 更新
 $ db.inventory.update( { status: "D" }, { $set: { qty: 0 } } )
